// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getTokenBalances > returns token balances in the right format on success 1`] = `
{
  "tokenBalances": [
    {
      "balanceWei": "10000",
      "token": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/packages/tokens/img/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "balanceWei": "10000",
      "token": {
        "address": "0xe8bd7cCC165FAEb9b81569B05424771B9A20cbEF",
        "asset": "/src/packages/tokens/img/cake.svg",
        "decimals": 18,
        "symbol": "CAKE",
      },
    },
  ],
}
`;

exports[`api/queries/getTokenBalances > returns token balances, including BNB, in the right format on success 1`] = `
{
  "tokenBalances": [
    {
      "balanceWei": "10000",
      "token": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/packages/tokens/img/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "balanceWei": "10000",
      "token": {
        "address": "0xe8bd7cCC165FAEb9b81569B05424771B9A20cbEF",
        "asset": "/src/packages/tokens/img/cake.svg",
        "decimals": 18,
        "symbol": "CAKE",
      },
    },
    {
      "balanceWei": "1000000000000000000",
      "token": {
        "address": "0x0000000000000000000000000000000000000000",
        "asset": "/src/packages/tokens/img/bnb.svg",
        "decimals": 18,
        "isNative": true,
        "symbol": "BNB",
      },
    },
  ],
}
`;
